--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 }
 .title h1 {
   font-weight: 700;
+}
   font-size: 36px;
 }
 .title h3 {
@@ -90,17 +91,16 @@ body {
   border-radius: 460px;
   max-height: 40px;
   box-shadow: filter: drop-shadow(0px 4px 4px rgba(0,0,0.25));
-  margin-left:6px
+  margin-left:6px;
 }
 .instagram {
   border-radius: 460px;
   max-height: 40px;
-  box-shadow: filter: drop-shadow(0px 4px 4px rgba(0,0,0.25))
-  
+  box-shadow: filter: drop-shadow(0px 4px 4px rgba(0,0,0.25));
 }
 a {
   text-decoration: none;
-  color: #1C1C1C
+  color: #1C1C1C;
 }
 .twitter {
     border-radius: 460px;
@@ -118,14 +118,14 @@ a {
     color: #F6F6F6;
 }
 .dark .Projetos  {
-  color: #1C1C1C
+  color: #1C1C1C;
 }
 .dark .tema button {
   background: #1C1C1C;
   color: #FFFFFF;
     border: 1px solid #F7F7F7;
   transition: 0.2s;
-  cursor: pointer
+  cursor: pointer;
 }
 .dark .tema button:hover {
   background: #0E1D2F;
